2005-07-03  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Modified detection of 'delayed blast' projectile, as it was too inclusive
	  before. I also am interpreting its lack of projectile data to mean it
	  should not be rendered. This matches the original.
	* Modified the way SI sleep arrows work to better match the original.

2005-07-04  Ryan Nunn  <colourles@users.sourceforge.net>
	* exult.cc : Ensure Audio is deinitialized on exit
	* audio/midi_drivers/LowLevelMidiDriver.cpp, 
	  audio/midi_drivers/XMidiFile.cpp : Small changes to MT32 display handling

2005-07-03    <jeff@mini.nerble.net>

	* When equipping monsters, give them ammo for their weapons.
	* When an NPC can't pathfind to an enemy in combat, just let him
	wander a short way towards the enemy before retrying.

2005-07-03  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actors.cc, shapes/shapeinf.h: Modified constant names and used them for attack
	  frames. Also changed the default attack sequence for when there is no weapon.
2005-07-03  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actors.cc, shapes/shapeinf.h: Implemented weapon-dependent frame sequences
	  for attacks
	* effects.cc, effects.h: Slightly modified the way burst arrows are handled,
	  eliminated some hard-coded data about explosion sizes and moved the definition
	  of Get_explosion_shape out of Explosion_effect class.
2005-07-02  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* shapes/shapeinf.cc, etc: Added capabilities to read/save some previously
	  unknown data from ammo.dat and fixed minor bug on saving weapons.dat
	* effects.cc: Modified to use newly decoded ammo.dat info, modified Death
	  Vortex to more closely resemble original and implemented Energy Mist (the
	  latter two share the same code)
	* actors.cc: Modified how explosives work on hit; includes modifications for
	  Death Vortex and Energy Mist; now uses new ammo.dat info to determine if
	  missiles should be dropped on hit/miss.